--- a/web/public/views/home.html
+++ b/web/public/views/home.html
@@ -16,6 +16,9 @@
         <h3 class="panel-title">Sign In</h3>
       </div>
       <div class="panel-body">
+        <div ng-show="loginError != null" class="alert alert-danger fade in">
+          {{loginError}}
+        </div>
         <form role="form" ng-submit="login()">
           <div class="form-group">
             <label>Email address</label>
@@ -37,6 +40,9 @@
         <h3 class="panel-title">Don't have a profile yet?</h3>
       </div>
       <div class="panel-body">
+        <div ng-show="signupError != null" class="alert alert-danger fade in">
+          {{signupError}}
+        </div>
         <form role="form" ng-submit="register()">
           <div class="form-group">
             <label>First name</label>
