--- a/web/public/views/profile.html
+++ b/web/public/views/profile.html
@@ -7,6 +7,9 @@
         <h3 class="panel-title">My profile</h3>
       </div>
       <div class="panel-body">
+        <div ng-show="error != null" class="alert alert-danger fade in">
+          {{error}}
+        </div>
         <div ng-show="updated" class="alert alert-success fade in">
           Your changes have been saved.
         </div>
@@ -19,11 +22,11 @@
         </div>
         <div class="form-group">
           <label>First name</label>
-          <input ng-model="user.first_name" type="email" class="form-control" placeholder="First name">
+          <input ng-model="user.first_name" type="text" class="form-control" placeholder="First name">
         </div>
         <div class="form-group">
           <label>Last name</label>
-          <input ng-model="user.last_name" type="email" class="form-control" placeholder="Last name">
+          <input ng-model="user.last_name" type="text" class="form-control" placeholder="Last name">
         </div>
       </div>
     </div>
