--- a/web/public/views/profile.html
+++ b/web/public/views/profile.html
@@ -2,6 +2,9 @@
 
 <div class="container profile">
   <div class="col-md-4" class="profile">
+    
+    <ng-include src="'views/profile/pending_friendships.html'" ng-controller="PendingFriendshipsController"></ng-include>
+    
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">My profile</h3>
@@ -22,7 +25,7 @@
         </div>
         <div class="form-group">
           <label>First name</label>
-          <input ng-model="user.first_name" type="text" class="form-control" placeholder="First name">
+          <input ng-model="user.source_user.first_name" type="text" class="form-control" placeholder="First name">
         </div>
         <div class="form-group">
           <label>Last name</label>
@@ -30,9 +33,12 @@
         </div>
       </div>
     </div>
+    
+    <ng-include src="'views/profile/search.html'" ng-controller="SearchController"></ng-include>
   </div>
   
-  <div class="col-md-8" class="profile">
+  
+  <div class="col-md-4" class="profile">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Feed</h3>
